src/tess/tl/test/fail/test_fail_alias_double_underscore.tl
#module Foo
f() { 1 }

#module main
#alias my__alias Foo

main() { my__alias.f() }
